# TaskPlanner

./: .dockerignore  .env  .env_ci  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: action.yaml  deploy_on_name.yaml  push_any_except_main.yaml
TaskPlanner/: asgi.py  settings.py  urls.py  wsgi.py
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/migrations/: 0001_initial.py  0002_rename_telegram_user_id_tguser_user.py
bot/tg/: client.py  dc.py
core/: admin.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_options.py
goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goal_alter_goalcategory_created_and_more.py  0003_board_goalcategory_board_boardparticipant.py  0004_create_new_objects.py  0005_alter_goalcategory_board.py
goals/serializers/: board.py  goal_category.py  goal_comment.py  goals.py
goals/views/: board.py  goal_category.py  goal_comment.py  goals.py
tests/: conftest.py  factories.py
tests/test_core/: test_login.py
tests/test_goals/: factories.py  test_goal_category.py  test_goal_comment.py  test_goals.py
