[tool.poetry]
name = "taskplanner"
version = "0.1.0"
description = ""
authors = ["Andrew-715 <kutuzkin98@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.6"
django = "^4.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
